Añadido template js en la railz del layout base

--- a/public/css/main_navbar.css
+++ b/public/css/main_navbar.css
@@ -1,3 +1,9 @@
-.main-navbar{
+.main-navbar {
     border: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+}
+
+.main-navbar > p:hover {
+    text-decoration: underline;
 }
