--- a/public/css/login.css
+++ b/public/css/login.css
@@ -118,3 +118,19 @@ body {
     margin-bottom: 1rem;
     width: 100%;
 }
+
+.link {
+    color: #00eaff !important; /* El color de tu loader para mantener la estética */
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.link:hover {
+    color: #ffffff;
+    text-decoration: underline;
+}
+
+.link:visited {
+    color: #00eaff; /* Evita que se ponga morado tras hacer click */
+}
